--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,19 @@
 
 {% block content %}
 
-{% for section in page.params.sections %}
-  {% set include_dict = {'section': section, 'site': site} %}
-  {% include section.component %}
-{% endfor %}
+<h1>{{ site.title }}</h1>
+<h2>{{ page.params.sub_heading }}</h2>
+
+{{ page.content  }}
+
+<div class="features">
+  {% set features = getPages("/features") | sort(true, true, "date") %}
+  {% for feature in features %}
+  <div class="feature">
+      <h2 class="feature-title"><a href="{{ feature.url | relative_url }}">{{ feature.params.title }}</a></h2>
+      <p>{{ feature.params.description }}</p>
+  </div>
+  {% endfor %}
+</div>
 
 {% endblock %}
