--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,15 @@
 <footer id="colophon" class="site-footer">
   <p class="site-info">
-    {{ site.data.footer.copyright | safe }}
-  </p><!-- .site-info -->
-</footer><!-- .site-footer -->
+    {{ site.params.footer_link | safe }}
+  </p>
+
+  {% if site.params.show_social_media_links %}
+  <ul class="social-links">
+    {% for link in site.data.social.links %}
+    <li>
+      <a href="{{ link.url }}" target="_blank" rel="noopener">{{ link.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+</footer>
