--- a/templates/body.html
+++ b/templates/body.html
@@ -3,15 +3,11 @@
 {% block body %}
 <div id="page" class="site">
   <div class="inner">
-
     {% include "header.html" %}
-
     <main id="content" class="site-content">
       {% block content %}{% endblock %}
-    </main><!-- .site-content -->
-
-    {% include "footer.html" %}
-
-  </div><!-- .inner -->
-</div><!-- .site -->
+    </main>
+  </div>
+  {% include "footer.html" %}
+</div>
 {% endblock %}
