--- a/templates/feature.html
+++ b/templates/feature.html
@@ -10,6 +10,9 @@
     {% endif %}
     <h1 class="post-title">{{ page.params.title }}</h1>
     {{ page.content }}
+    <footer class="feature-meta">
+      <time class="published" datetime="{{page.date | date_format("%Y-%m-%d %H:%M") }}">{{feature.date | date_format("%A, %B %e, %Y") }}</time>
+    </footer>
   </div>
 
 {% endblock %}
