--- a/components/header.html
+++ b/components/header.html
@@ -1,15 +1,14 @@
-<header id="masthead" class="site-header">
-
+<header class="site-header">
+  <div class="site-header-inner">
   <div class="site-branding">
     <h1 class="site-title"><a href='{{ "/" | relative_url }}'>{{ site.title }}</a></h1>
   </div>
-
   {% if site.menus.main %}
-  <nav id="main-navigation" class="site-navigation">
+  <nav class="site-navigation">
     {% set menu = site.menus.main %}
     {% set include_dict = {"menu": menu, "page": page} %}
     {% include "menu.html" %}
   </nav>
   {% endif %}
-
+  </div>
 </header>
