--- a/components/post_body.html
+++ b/components/post_body.html
@@ -1,2 +1,2 @@
-<!-- Scripts -->
 <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/header.js' | relative_url }}"></script>
