--- a/sass/imports/_footer.scss
+++ b/sass/imports/_footer.scss
@@ -3,10 +3,9 @@
  * ----------------------------------------------------------------------------
  */
 .site-footer {
-  border-top: 1px solid _palette(border);
+  border-top: 1px solid $secondary;
   padding-bottom: 1.5em;
   padding-top: 1.5em;
-
   .site-info {
     font-size: 0.875rem;
     line-height: 1.5;
