--- a/sass/imports/_general.scss
+++ b/sass/imports/_general.scss
@@ -1,22 +1,6 @@
-/**
- * General
- * ----------------------------------------------------------------------------
- */
-html {
-  font-family: _font(primary);
-  font-size: 100%;
-}
-
-body {
-  background: #fff;
-  color: _palette(primary);
-  line-height: 1.75;
-}
-
 a {
-  color: _palette(accent);
+  color: $primary;
   text-decoration: none;
-
   &:hover {
     text-decoration: underline;
   }
@@ -28,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: _palette(secondary);
+  color: $secondary;
   font-weight: bold;
   line-height: 1.2;
   margin: 1.875rem 0 1.125rem;
@@ -68,7 +52,7 @@ p {
 }
 
 pre {
-  border: 1px solid _palette(border);
+  border: 1px solid $secondary;
   font-size: 1rem;
   margin: 0 0 1.75em;
   overflow: auto;
@@ -77,7 +61,7 @@ pre {
 }
 
 blockquote {
-  border-left: 3px solid _palette(accent);
+  border-left: 3px solid $primary;
   font-size: 1.5rem;
   line-height: 1.5;
   margin: 1.875rem 0;
@@ -134,7 +118,7 @@ li > ol {
 }
 
 hr {
-  background-color: _palette(border);
+  background-color: $secondary;
   border: 0;
   height: 1px;
   margin: 1.75em 0;
@@ -149,12 +133,12 @@ table {
 
 th,
 td {
-  border-bottom: 1px solid _palette(border);
+  border-bottom: 1px solid $secondary;
   padding: 0.5em;
 }
 
 th {
-  color: _palette(secondary);
+  color: $secondary;
   font-weight: bold;
 }
 
@@ -168,7 +152,7 @@ input[type="url"],
 select,
 textarea {
   background: #fff;
-  border: 1px solid _palette(border);
+  border: 1px solid $secondary;
   box-shadow: none;
   box-sizing: border-box;
   display: inline-block;
@@ -200,10 +184,10 @@ input[type="submit"],
 input[type="button"],
 input[type="reset"],
 a.button {
-  background-color: _palette(accent);
+  background-color: $primary;
   border: 0;
   box-sizing: border-box;
-  color: _palette(secondary);
+  color: $secondary;
   display: inline-block;
   font-size: 1rem;
   height: 2.5rem;
@@ -213,7 +197,7 @@ a.button {
   &:hover,
   &:focus,
   &:active {
-    background-color: rgba(_palette(accent), 0.75);
+    background-color: rgba($primary, 0.75);
     outline: 0;
   }
 }
@@ -236,26 +220,4 @@ video {
 img {
   height: auto;
   max-width: 100%;
-}
-
-/* Text meant only for screen readers */
-.screen-reader-text {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  height: 1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  width: 1px;
-}
-
-/* Clearing floats */
-.post-content:after {
-  clear: both;
-}
-
-.post-content:before,
-.post-content:after {
-  content: "";
-  display: table;
 }
