--- a/sass/imports/_header.scss
+++ b/sass/imports/_header.scss
@@ -3,40 +3,34 @@
  * ----------------------------------------------------------------------------
  */
 .site-header {
-  border-bottom: 1px solid _palette(border);
-  color: _palette(primary);
+  border-bottom: 1px solid #CCC;
+  color: $primary;
   margin-bottom: 3.75em;
-  padding-bottom: 1.5em;
-  padding-top: 1.5em;
+  padding: 20px;
+}
 
+.site-header-inner {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
   @media only screen and (min-width: 801px) {
-    -ms-flex-align: center;
-    -webkit-align-items: center;
     align-items: center;
-    display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
   }
 }
 
 .site-title {
-  color: _palette(secondary);
+  color: $secondary;
   font-size: 1.875rem;
   font-weight: bold;
   line-height: 1.2;
   margin: 0;
-
   a {
     color: inherit;
     text-decoration: none;
   }
 }
 
-.site-description {
-  font-size: 1rem;
-  line-height: 1.5;
-  margin: 0.625rem 0 0;
-}
 
 .site-navigation {
   margin-top: 1.875em;
@@ -51,7 +45,7 @@
     line-height: 1.5;
 
     &.current {
-      color: _palette(accent);
+      color: $primary;
     }
 
     ul {
@@ -67,7 +61,7 @@
 
     &:hover,
     &:focus {
-      color: _palette(accent);
+      color: $primary;
     }
   }
 }
@@ -84,7 +78,7 @@
 
       ul {
         background: #fff;
-        border: 1px solid _palette(border);
+        border: 1px solid $secondary;
         display: none;
         left: 0;
         padding: 0;
