--- a/sass/main.scss.njk
+++ b/sass/main.scss.njk
@@ -1,24 +1,14 @@
 // Font.
-$font: (
-  primary: ("Helvetica Neue",Helvetica,sans-serif)
-);
+$font-base: "Helvetica Neue" ,Helvetica ,sans-serif;
 
-// Palette.
-{% set palette = site.params.palette %}
-$palette: (
-  primary:   #444,
-  secondary: darken(#444, 15%),
-  border:    lighten(#444, 55%),
-  accent:    {{ palette }}
-);
-
-@import "imports/functions";
+// Color Palette
+{% set palette = site.params.primary_color %}
+$primary: {{ palette }};
+$secondary: darken(#444, 15%);
 
 @import "imports/reset";
+@import "imports/main";
 @import "imports/general";
-@import "imports/structure";
 @import "imports/header";
-@import "imports/posts";
-@import "imports/sections";
 @import "imports/footer";
 @import "imports/feature";
