--- a/sass/imports/_feature.scss
+++ b/sass/imports/_feature.scss
@@ -25,28 +25,13 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    height: 100%;
   }
   .feature-thumbnail {
-    border: 0;
-    border-radius: 3px 3px 0 0;
-    display: block;
-    margin: 0;
-    position: relative;
-    width: 100%;
     max-height: 200px;
+    overflow: hidden;
     flex: 1 1 auto;
-    &:before {
-      content: "";
-      display: block;
-      padding-top: 66.666%;
-    }
     img {
-      border-radius: 3px 3px 0 0;
-      height: 100%;
-      left: 0;
-      object-fit: cover;
-      position: absolute;
-      top: 0;
       width: 100%;
     }
   }
