--- a/sass/imports/_main.scss
+++ b/sass/imports/_main.scss
@@ -1,27 +1,6 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: $font-base;
-  font-size: 100%;
-}
-
-body {
-  background: #fff;
-  color: $secondary;
-  line-height: 1.75;
-}
-
-.inner {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
-}
-
-.site {
-  padding-left: 3vw;
-  padding-right: 3vw;
+.home {
+  width: 80%;
+  @media only screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
