--- a/templates/body.html
+++ b/templates/body.html
@@ -2,11 +2,9 @@
 
 {% block body %}
 {% include "header.html" %}
-<div class="site">
-  <div class="inner">
-    <main>
-      {% block content %}{% endblock %}
-    </main>
+<div class="wrapper">
+  <div class="container">
+    {% block content %}{% endblock %}
   </div>
 </div>
 {% endblock %}
