--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,31 @@
 
 {% block content %}
 
-<h1>{{ page.params.heading }}</h1>
+<div class="home">
+  
+  <h1>{{ page.params.heading }}</h1>
+  {{ page.content }}
 
-{{ page.content  }}
+  {% if site.data.generators.ssg %}
+  <ul>
+  {% for link in site.data.generators.ssg %}
+    <li>{{ link.title }}</li>
+  {% endfor %}
+  </ul>
+  {% endif %}
+
+  {% if site.data.generators.cms %}
+  <ul>
+  {% for link in site.data.generators.cms %}
+    <li>{{ link.title }}</li>
+  {% endfor %}
+  </ul>
+  {% endif %}
+
+  {% if page.params.show_button %}
+  <a href="{{ page.params.button_url }}" class="button">{{ page.params.button_text }}</a>
+  {% endif %}
+  
+</div>
 
 {% endblock %}
