--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
   <div class="site-header-inner">
   <div class="site-branding">
     <img class="site-logo" src="{{ site.params.logo | relative_url }}"/>
-    <h1 class="site-title"><a href='{{ "/" | relative_url }}'>{{ site.title }}</a></h1>
+    <h1 class="site-title"><a href='{{ site.baseurl | relative_url }}'>{{ site.title }}</a></h1>
   </div>
   {% if site.menus.main %}
   <nav class="site-navigation">
