--- a/templates/feature.html
+++ b/templates/feature.html
@@ -2,4 +2,8 @@
 {% block content %}
   <h1>{{ page.params.title }}</h1>
   {{ page.content }}
+
+  {% set include_dict = {"page": page, "site": site, "classes": "button inverse"} %}
+  {% include "feature_button.html" %}
+
 {% endblock %}
