--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
   {% endif %}
 
   {% if page.params.show_button %}
-  <a href="{{ page.params.button_url }}" class="button inverse">{{ page.params.button_text }}</a>
+    {% include "homepage_button.html" %}
   {% endif %}
   
 </div>
