add example of footer component using site params

--- a/sass/main.scss.njk
+++ b/sass/main.scss.njk
@@ -8,6 +8,7 @@ $black: #181215;
 @import "imports/general";
 @import "imports/main";
 @import "imports/header";
+@import "imports/footer";
 @import "imports/feature";
 @import "imports/buttons";
 @import "imports/banner";
