update content model in stackbit.yaml

--- a/components/homepage_button.html
+++ b/components/homepage_button.html
@@ -1,3 +1,3 @@
-<a href="{{ site.params.docs_url }}/{{ page.params.button_link }}" class="button">
-  {{ page.params.button_text }}
+<a href="{{ site.params.docs_url }}/{{ page.params.homepage_button_link }}" class="button">
+  {{ page.params.homepage_button_text }}
 </a>
