fix accessibility issues

--- a/sass/main.scss.njk
+++ b/sass/main.scss.njk
@@ -1,5 +1,5 @@
 $font-base: "Helvetica Neue" , Helvetica , apple-system, arial, sans-serif;
-$primary: #fc397c;
+$primary: #da2e69;
 $secondary: darken(#444, 15%);
 $grey: #383838;
 $black: #181215;
