--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="site-header-inner">
   <div class="site-branding">
-    <img class="site-logo" src="{{ site.params.logo | relative_url }}"/>
+    <img class="site-logo" alt="Site logo" src="{{ site.params.logo | relative_url }}"/>
     <h1 class="site-title"><a href='{{ site.baseurl | relative_url }}'>{{ site.title }}</a></h1>
   </div>
   {% if site.menus.main %}
